# rsc

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  info.json  pyproject.toml  pytest.ini  requirements.txt
data/: cut.json  find_match.json  league_player.json  match.json  sign.json
data/combines/: combines_event_game_finished.json  combines_webhook.json  combines_webhook_2s.json
json_examples/: cut.json  find_match.json  franchises.json  league_player.json  match.json  sign.json
json_examples/combines/: combines_webhook.json
rsc/: __init__.py  abc.py  const.py  core.py  decorator.py  embeds.py  enums.py  exceptions.py  logs.py  members.py  numbers.py  protocols.py  transactions.py  transformers.py  types.py  utils.py  views.py
rsc/admin/: README.md  __init__.py  admin.py  agm.py  audit.py  franchise.py  inactivity.py  intents.py  match.py  members.py  modals.py  models.py  permfa.py  protocol.py  stats.py  sync.py  views.py
rsc/ballchasing/: __init__.py  ballchasing.py  deprecated.py  groups.py  modals.py  process.py  search.py  validation.py  views.py
rsc/combines/: README.md  __init__.py  api.py  combines.py  manager.py  models.py  protocol.py  runner.py
rsc/developer/: __init__.py  developer.py
rsc/devleague/: __init__.py  api.py  devleague.py  models.py
rsc/extras/: __init__.py  extras.py
rsc/franchises/: README.md  __init__.py  franchises.py  protocol.py  views.py
rsc/freeagents/: README.md  __init__.py  freeagents.py  protocol.py  views.py
rsc/league/: __init__.py  league.py
rsc/leagues/: README.md  __init__.py  leagues.py  protocol.py
rsc/llm/: __init__.py  create_db.py  llm.py  query.py
rsc/llm/loaders/: __init__.py  franchiseloader.py  matchloader.py  playerloader.py  ruleloader.py  teamloader.py
rsc/matches/: README.md  __init__.py  matches.py  protocol.py
rsc/members/: README.md  __init__.py  members.py  protocol.py  views.py
rsc/members/views/: __init__.py  intent.py  player_info.py  signup.py
rsc/moderator/: __init__.py  moderator.py  strikes.py  thread.py
rsc/numbers/: __init__.py  numbers.py
rsc/ranks/: __init__.py  api.py  models.py  ranks.py
rsc/resources/funny/: best_chip.md  feet.md  nickm.md  whatami.md
rsc/resources/help/: combines_help.md  combines_how_to_play.md  glossary.md  important_channels.md  rsc.md
rsc/resources/rules/: Behavioral Rules.md  Elevated Rules v1.0.3.md  Elevated Rules.md  RSC Rules.md  S19-Rocket-Soccar-Confederation-Rules.md
rsc/seasons/: __init__.py  protocol.py  seasons.py
rsc/stats/: __init__.py  stats.py
rsc/teams/: __init__.py  protocol.py  teams.py  views.py
rsc/tiers/: __init__.py  protocol.py  tiers.py
rsc/trackers/: __init__.py  protocol.py  scraper.py  trackers.py
rsc/transactions/: README.md  __init__.py  modals.py  protocol.py  roles.py  transactions.py  views.py
rsc/utils/: README.md  __init__.py  dm.py  filters.py  images.py  pagify.py  trophy.py  utils.py  views.py
rsc/utils/views/: bulk_role.py  mass_trophy.py
rsc/welcome/: __init__.py  welcome.py
scripts/: ballchasing_backup.py  bot_backup.sh  brute_test_combines_check_in.py  bulk_ballchasing_upload.py  calculate_round_mmr.py  check_contracts.py  check_inactive_league_players.py  check_prior_season_status.py  combines_participation.py  combines_season_performance.py  duplicate_rsc_members.py  find_ballchasing_failed_replay.py  find_duplicate_trackers.py  get_replay.py  mmr_scraper.py  organize_bc_group_by_date.py  paged_league_players.py  parse_screenshot_stats.py  send_combines_end.py  send_combines_lobby.py  show_league_player_stats.py  test_draft.py  test_find_match.py  test_name_change.py  test_pagination_members.py  test_pagination_players.py  test_throttling.py  test_valid_franchise_draft_picks.py  validate_league_players.py  validate_trackers.py
scripts/data/: trackers.json
tests/: conftest.py  test_dm.py  test_franchises.py  test_franchises_api.py  test_freeagents.py  test_league_players.py  test_leagues.py  test_matches.py  test_matches_api.py  test_members.py  test_members_api.py  test_numbers.py  test_players_api.py  test_seasons.py  test_seasons_api.py  test_teams.py  test_teams_api.py  test_tiers.py  test_tiers_api.py  test_tracker_links.py  test_trackers.py  test_trackers_api.py  test_transactions.py  test_transactions_api.py  utils.py
