[project]
name = "RSC-Discord-Bot"
version = "1.0.0"
requires-python = ">3.11"

[tool.mypy]
check_untyped_defs = true
mypy_path = ["/home/xentrick/dev/python-replay-parser"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 140
indent-width = 4
exclude = ["scripts/", "data/", "tests/"]

[tool.ruff.lint]
select = [
    "ANN",   # annotations
    "ASYNC", # async
    "B",     # bugbear
    "C4",    # comprehensions
    "COM",   # trailing comma
    "DJ",    # Django
    "DTZ",   # naive datetime
    "E",     # style errors
    "EXE",   # shebang
    "F",     # flakes
    "FLY",   # string formatting
    "FURB",  # refurbishing
    "G",     # logging format
    # "I", # import sorting
    "INT",  # gettext
    "ISC",  # string concatenation
    "LOG",  # logging
    "N",    # naming
    "PERF", # performance
    "PGH",  # pygrep-hooks
    "PIE",  # miscellaneous
    "PL",   # pylint
    "PTH",  # path
    "PYI",  # typing stubs
    "Q",    # quotes
    "RSE",  # raise
    "RUF",  # Ruff
    "S",    # security
    "SLOT", # __slots__
    "SIM",  # simplify
    "T10",  # debugger
    "TC",   # type-checking
    "TID",  # tidy imports
    "UP",   # upgrade
    "W",    # style warnings
    "YTT",  # sys.version
]
ignore = [
    "ANN002",  # Missing type annotation for `*args`
    "ANN003",  # Missing type annotation for `**kwargs`
    "ANN201",  # Missing return type annotation
    "ANN202",  # Missing return type annotation
    "ANN204",  # Missing return type annotation for special method `__init__`
    "B904",    # Within an except clause, raise exceptions with raise ... from err or raise ... from None to distinguish them from errors in exception handling
    "COM812",  # Trailing comma missing
    "DJ008",   # Model does not define `__str__` method
    "G004",    # Logging statement uses f-string
    "N806",    # Variable in function should be lowercase
    "PLC0414", # Import alias does not rename original package
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLW2901", # Outer for loop variable overwritten by inner for loop target
    "S324",    # Probable use of insecure hash functions in `hashlib`
    "SIM105",  # Use `contextlib.suppress(ValueError)` instead of `try`-`except`-`pass`
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"


[tool.codespell]
skip = ["*.json"]
ignore-words-list = "ptd,oce,nd,cros,recuse,checkin"

[tool.pytest.ini_options]
minversion = "7.0"
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = [
    "ignore::DeprecationWarning:aiohttp_json_rpc",
    "ignore::DeprecationWarning:aiohttp",
]
env_files = [".env"]

[tool.ty.src]
exclude = ["scripts", "tests"]

[tool.ty.environment]
extra-paths = ["/home/xentrick/dev/python-replay-parser"]
